force-app/main/default/objects/Winner__c/Winner__c.object-meta.xml
<CustomObject>
    <description>中獎名單</description>
    <label>Winner</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Winner</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>