force-app/main/default/objects/Winner__c/fields/Email_Address_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Hidden__c</fullName>
    <formula>IF(ISBLANK(Email_Address__c)=true,&apos;&apos;,LEFT(Email_Address__c,5)+&apos;***********&apos;+Right(Email_Address__c,6))</formula>
    <label>Email Address (Hidden)</label>
    <type>Text</type>
</CustomField>