force-app/main/default/objects/Winner__c/fields/F_No__c.field-meta.xml
<CustomField>
    <fullName>F_No__c</fullName>
    <formula>PrizeID__r.F_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F_No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>