force-app/main/default/objects/Winner__c/fields/Lucky_Draw_Name__c.field-meta.xml
<CustomField>
    <fullName>Lucky_Draw_Name__c</fullName>
    <formula>LuckyDrawSettingID__r.Drawing_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lucky Draw Name</label>
    <type>Text</type>
</CustomField>