force-app/main/default/objects/Winner__c/fields/LuckyDrawSettingID__c.field-meta.xml
<CustomField>
    <fullName>LuckyDrawSettingID__c</fullName>
    <label>Lucky Draw Setting</label>
    <referenceTo>Lucky_Draw_Setting__c</referenceTo>
    <relationshipLabel>Winner</relationshipLabel>
    <relationshipName>LuckyDrawSettingWinner</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>