force-app/main/default/objects/Winner__c/fields/Prize_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prize_Amount__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Prize Amount</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>