force-app/main/default/objects/Winner__c/fields/Prize_Name__c.field-meta.xml
<CustomField>
    <fullName>Prize_Name__c</fullName>
    <formula>PrizeID__r.Prize_Name__c</formula>
    <label>Prize Name</label>
    <type>Text</type>
</CustomField>