force-app/main/default/objects/Winner__c/fields/Prize_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Prize_Name_English__c</fullName>
    <formula>PrizeID__r.Prize_Name_English__c</formula>
    <label>Prize Name (English)</label>
    <type>Text</type>
</CustomField>