force-app/main/default/objects/Winner__c/fields/PrizeID__c.field-meta.xml
<CustomField>
    <fullName>PrizeID__c</fullName>
    <label>Prize</label>
    <referenceTo>Prize__c</referenceTo>
    <relationshipLabel>Winner</relationshipLabel>
    <relationshipName>PrizeWinner</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>