force-app/main/default/objects/Winner__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>PrizeID__r.Unit__c</formula>
    <label>Unit</label>
    <type>Text</type>
</CustomField>