force-app/main/default/objects/Winner__c/fields/Winner_No__c.field-meta.xml
<CustomField>
    <fullName>Winner_No__c</fullName>
    <label>Winner No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>